# notion-export-prettify

./: .gitignore  README.md  pyproject.toml
docs/strips/: make-strip.sh
notion_export_prettify/: args.py  main.py  notion_html_manipulator.py  pdf_maker.py
notion_pretty_export/: args.py  html_manipulator.py  html_templator.py  main.py  notion_html_manipulator.py  pdf_maker.py  print_color.py  resource_loader.py
templates/example/: Template.docx  background.html  cover.html  footer.html  header.html  overwrites.css  page.css  template.cfg
templates/example-landscape/: background.html  cover.html  overwrites.css  page.css  template.cfg
