[tool.poetry]
name = "notion_pretty_export"
version = "0.1.0"
description = ""
authors = ["Fabre Lambeau <fabre.lambeau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.24.0"
beautifulsoup4 = "^4.12.3"
playwright = "^1.42.0"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
