[tool.poetry]
name = "notion-export-prettify"
version = "1.2.0"
description = ""
authors = ["Fabre Lambeau <fabre.lambeau@gmail.com>"]
readme = "README.md"
include = ["templates/example", "templates/example-landscape"]

[tool.poetry.dependencies]
python = "^3.11"
pymupdf = "^1.24.0"
beautifulsoup4 = "^4.12.3"
playwright = "^1.42.0"
jinja2 = "^3.1.3"
colorama = "^0.4.6"
configargparse = "^1.7"

[tool.poetry.scripts]
notion-export-prettify = "notion_export_prettify.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
